<resources>
    <string name="app_name">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code">Code</string>
    <string name="colors">Colors</string>
    <string name="size">Size</string>
    <string name="material">Material</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="code_">Code:</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="offer">Offer</string>
</resources>